# main_street

./: .gitignore  CLAUDE.md  pyproject.toml
bench/: solver_bench.csv  solver_bench.py
experiments/: default.json  grpo_qwen3_8b_smoke.json  quick.json  selfplay_8h.json  selfplay_hard.json  smoke.json
experiments/overnight/: 01_sup_small.json  02_selfplay_fixed_small.json  03_mixed_fixed_small.json  04_mixed_sampled_small.json  05_selfplay_sampled_small.json  06_mixed_hard_small.json  07_mixed_24_to_100.json  08_selfplay_24_to_100.json  09_large_low_sims.json  10_large_high_sims.json  11_large_many_turns.json  12_large_few_big.json  13_arch_tiny_100.json  14_arch_small_100.json  15_arch_deep_100.json  16_arch_wide_100.json  17_arch_wide_kernel_100.json  18_no_dirichlet_100.json  19_high_exploration_100.json  20_heuristic_forkaware_100.json  21_seed1_mixed_24_to_100.json  MANIFEST.md
experiments/strong/: 01_small_selfplay_arch100.json  02_small_mixed_arch100.json  03_large_selfplay_12_to_100.json  04_large_mixed_12_to_100.json  05_small_arch32_control.json  06_train_12_to_48_arch100.json  07_train_24_to_72_arch100.json  08_train_48_to_100_arch100.json  09_full_range_8_to_100_arch100.json  11_many_turns.json  (+14 more)
scripts/: tournament.py  xwins_heatmap.py
tests/: _llm_test_utils.py  test_agents.py  test_core.py  test_eval.py  test_grpo.py  test_llm.py  test_nn_encode_model.py  test_nn_mcts.py  test_nn_train.py  test_server.py  test_solve.py  test_spec_sampling.py  test_store.py
vllm_server/: README.md
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+72 files in other folders)
