[project]
name = "main-street"
version = "0.1.0"
description = "Deep RL on a 1D placement game (CS285 project)."
authors = [
    { name = "Alexander Remmerie" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "torch>=2.2",
    "wandb>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main_street"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
